fixing scrollbar (3)

--- a/defaultstring/style_garapan.css
+++ b/defaultstring/style_garapan.css
@@ -335,65 +335,44 @@ img.readingpict {
     overflow-x: hidden;
     overflow-y: hidden;
     white-space: nowrap;
-    background-color: rgb(0 0 0 / 0%);
+    background-color: rgba(0, 0, 0, 0%);
     display: flex;
     flex-wrap: wrap;
-	flex-direction: column;
+    flex-direction: column;
 }
+
 .scroll-container:hover {
     overflow-x: hidden;
     overflow-y: auto;
 }
 
-/* WebKit Scrollbar */
-.scroll-container::-webkit-scrollbar {
-    width: 8px; /* lebar scroll bar */
-}
-
-.scroll-container::-webkit-scrollbar-track {
-    background: #f1f1f1; /* warna background track */
-}
-
-.scroll-container::-webkit-scrollbar-thumb {
-    background: #888; /* warna thumb scroll bar */
-    border-radius: 4px; /* border radius thumb */
-}
-
-/* MS Scrollbar (Edge) */
-.scroll-container::-ms-scrollbar {
-    width: 8px; /* lebar scroll bar */
-}
-
-.scroll-container::-ms-scrollbar-track {
-    background: #f1f1f1; /* warna background track */
-}
-
-.scroll-container::-ms-scrollbar-thumb {
-    background: #888; /* warna thumb scroll bar */
-    border-radius: 4px; /* border radius thumb */
-}
-
-/* Hover effect */
-.scroll-container:hover::-webkit-scrollbar-thumb {
-    background: #555; /* warna thumb scroll bar saat dihover */
-}
-
-.scroll-container:hover::-ms-scrollbar-thumb {
-    background: #555; /* warna thumb scroll bar saat dihover */
-}
-
-/* Scrollbar pada kondisi tertentu */
 @media screen and (max-width: 700px) {
-    .scroll-container {
+    .contents-flex {
+        flex-direction: column;
+    }
+    .scroll-container:hover {
         overflow-x: scroll;
         overflow-y: hidden;
     }
 }
 
 @media screen and (max-width: 1280px) {
+    .contents {
+        display: flex;
+    }
+    .contents-flex {
+        flex-direction: column;
+    }
     .scroll-container {
-        overflow-x: scroll;
+        margin-left: 0;
+        padding-top: 0;
+        overflow-x: auto; /* Menggunakan 'auto' pada overflow-x agar dapat menampilkan scroll bar pada browser yang tidak mendukung overflow-x: scroll */
         overflow-y: hidden;
+        min-width: 100%; /* Menggunakan '100%' untuk mengisi lebar konten */
+        height: 130pt;
+        flex-direction: column;
+        -ms-overflow-style: scrollbar; /* Untuk Internet Explorer */
+        scrollbar-width: thin; /* Untuk Firefox */
     }
 }
 
